# lm-eval-lab

./: .gitignore  .lab-config.yaml  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.ini  README.md  pyproject.toml  setup.cfg  setup.py
.github/: FUNDING.yaml
.github/workflows/: docusaurus.yml
.lab-configs/: eval-config.yaml  lab-config.yaml
.lab-prompts/: persona.toml  system.toml
data/: README.md
docs/: index.md
logs/evaluator/: README.md
logs/experiments/: README.md
logs/profiler/: README.md
logs/traces/: README.md
notebooks/: chat-completion.ipynb  demo.ipynb
requirements/: base.txt  dev.txt  packaging.txt
src/eval_lab/: cli.py
src/eval_lab/core/: __init__.py
src/eval_lab/human/: __init__.py  collect.py
src/eval_lab/lm/: __init__.py  judge.py
src/eval_lab/rag/: __init__.py  eval.py
src/eval_lab/tasks/: __init__.py  eval.py
src/eval_lab/utils/: config.py  log_environment_info.py
src/lm_eval_lab/: __init__.py  cli.py  utils.py
src/lm_eval_lab/core/: base_evaluator.py  evaluator.py
src/lm_eval_lab/harness/: __init__.py
src/lm_eval_lab/human/: __init__.py
src/lm_eval_lab/synth/: __init__.py
src/lm_eval_lab/utils/: load_files.py  load_prompts.py
website/: docusaurus.config.ts  package-lock.json  package.json
website/blog/: intro.mdx  tags.yml
website/docs/: intro.mdx
website/src/components/HomepageFeatures/: index.tsx
website/src/css/: custom.css
website/src/pages/: index.tsx
