# Copyright Justin R. Goheen.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[options]
zip_safe = False
packages = find:
install_requires =
    # hugging face libs
    huggingface_hub
    transformers
    datasets
    # lm tools
    langsmith
    langchain
    langchain-huggingface
    llama-index
    # inference
    llama-cpp-python
    # evals
    ragas
    lm-eval
    # parsers
    unstructured
    langchain-unstructured
    # vectors
    chromadb
    langchain-chroma
    # basic ui
    gradio
    # cli and env
    typer
    python-dotenv
    omegaconf

[options.extras_require]
dev =
    ruff
    black
    pytest
    mypy
    bandit
    coverage
    pre-commit
    isort
docs =
    mkdocs-material
    mkdocstrings[python]
    mkdocs-glightbox
dev-all =
    lm-eval-lab[dev, docs]
packaging =
    setuptools
    build
    twine

[options.entry_points]
console_scripts =
    lm-eval-lab = lm_eval_lab.cli:app

[flake8]
max-line-length = 120

[tool:pytest]
testpaths =
    tests
norecursedirs =
    .git
    .github
    *.egg-info
addopts =
    --disable-pytest-warnings

[coverage:run]
disable_warnings = ["couldnt-parse"]

[coverage:report]
ignore_errors = true
exclude_lines = ["pragma: no cover"]
